--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
     width: 90%;
     float: left;
     display: flex;
-    text-align:center;
+    text-align: center;
     overflow: hidden;
 }
 
@@ -24,7 +24,7 @@
     max-height: 100%;
     max-width: 100%;
     object-fit: cover;
-
+    display: none;
 }
 
 .fas {
@@ -43,6 +43,6 @@
     align-items: center;
 }
 
-.active {
-    display: block;
+.wrapper img.active {
+    display: inline-block;
 }
